--- a/InstagramClone/Common/Localization/Localizable.xcstrings
+++ b/InstagramClone/Common/Localization/Localizable.xcstrings
@@ -4,6 +4,9 @@
     "%@" : {
 
     },
+    "%lld Likes" : {
+
+    },
     "Create Account" : {
       "localizations" : {
         "hi" : {
@@ -13,9 +16,6 @@
           }
         }
       }
-    },
-    "Discard Image" : {
-
     },
     "Enter the title" : {
       "localizations" : {
@@ -70,6 +70,9 @@
     "New Account" : {
 
     },
+    "Post" : {
+
+    },
     "Search" : {
       "localizations" : {
         "hi" : {
@@ -79,9 +82,6 @@
           }
         }
       }
-    },
-    "Send to the storage." : {
-
     },
     "Sign In" : {
 
