Added share functionality

--- a/InstagramClone/Common/Localization/Localizable.xcstrings
+++ b/InstagramClone/Common/Localization/Localizable.xcstrings
@@ -64,6 +64,9 @@
         }
       }
     },
+    "Instagram Clone Application" : {
+
+    },
     "Messages" : {
 
     },
@@ -82,6 +85,9 @@
           }
         }
       }
+    },
+    "Sharing a post" : {
+
     },
     "Sign In" : {
 
