--- a/InstagramClone/Common/Localization/Localizable.xcstrings
+++ b/InstagramClone/Common/Localization/Localizable.xcstrings
@@ -7,6 +7,9 @@
     "%lld Likes" : {
 
     },
+    "Advanced Settings" : {
+
+    },
     "Create Account" : {
       "localizations" : {
         "hi" : {
